--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /.metadata/
 /avaliacao/avaliacao/target/
 /heranca/heranca/target/
+/Arrays/Arrays/target/
+/ExemploArrayList/ExemploArraylist/target/
