Adcionando gerador de CPF

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /heranca/heranca/target/
 /Arrays/Arrays/target/
 /ExemploArrayList/ExemploArraylist/target/
+/ExemploHashmap/ExemploHashmap/target/
