--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /ExemploHashmap/ExemploHashmap/target/
 /ProjetoMercado/TemdeTudo/nbproject/private/
 /ProjetoMercado/TemdeTudo/build/
+/ProjetoMercado/JavaApplication3/nbproject/private/
+/ProjetoMercado/JavaApplication3/build/
