--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /ProjetoMercado/TemdeTudo/build/
 /ProjetoMercado/JavaApplication3/nbproject/private/
 /ProjetoMercado/JavaApplication3/build/
+/ProjetoMercado/TemdeTudo/dist/
